install_data(
  'icons/16x16/apps/multimedia-audio-player.svg',
  'icons/22x22/apps/multimedia-audio-player.svg',
  'icons/24x24/apps/multimedia-audio-player.svg',
  'icons/32x32/apps/multimedia-audio-player.svg',
  'icons/48x48/apps/multimedia-audio-player.svg',
  'icons/64x64/apps/multimedia-audio-player.svg',
  'icons/128x128/apps/multimedia-audio-player.svg',
  'icons/128x128/apps/multimedia-audio-player.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor')
)
